# mandelrust

./: Cargo.toml  LICENSE  Makefile  README.md  build.rs  engine.rs  gui.rs  mandelrust.rs  notes.txt  protocol.rs  test.ppm
output/: mandelbrot_test_001.pgm  mandelbrot_test_002.pgm
src/: engine.rs  gui.rs  mandelrust.rs  mr.rs  protocol.rs  shaders.rs
